sdk/consumption/arm-consumption/samples/v10/typescript/README.md
# client library samples for TypeScript

These sample programs show how to use the TypeScript client libraries for in some common scenarios.

| **File Name**                                                                                                                         | **Description**                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| ------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [aggregatedCostGetByManagementGroupSample.ts][aggregatedcostgetbymanagementgroupsample]                                               | provides the aggregate cost of a management group and all child management groups by current billing period. x-ms-original-file: 2026-06-01/AggregatedCostByManagementGroup.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
| [aggregatedCostGetForBillingPeriodByManagementGroupSample.ts][aggregatedcostgetforbillingperiodbymanagementgroupsample]               | provides the aggregate cost of a management group and all child management groups by specified billing period x-ms-original-file: 2026-06-01/AggregatedCostForBillingPeriodByManagementGroup.json                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
| [balancesGetByBillingAccountSample.ts][balancesgetbybillingaccountsample]                                                             | gets the balances for a scope by billingAccountId. Balances are available via this API only for May 1, 2014 or later. x-ms-original-file: 2026-06-01/BalancesByBillingAccount.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
| [balancesGetForBillingPeriodByBillingAccountSample.ts][balancesgetforbillingperiodbybillingaccountsample]                             | gets the balances for a scope by billing period and billingAccountId. Balances are available via this API only for May 1, 2014 or later. x-ms-original-file: 2026-06-01/BalancesByBillingAccountForBillingPeriod.json                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| [budgetsCreateOrUpdateSample.ts][budgetscreateorupdatesample]                                                                         | the operation to create or update a budget. You can optionally provide an eTag if desired as a form of concurrency control. To obtain the latest eTag for a given budget, perform a get operation prior to your put operation. x-ms-original-file: 2026-06-01/CreateOrUpdateBudget.json                                                                                                                                                                                                                                                                                                                                                                    |
| [budgetsDeleteSample.ts][budgetsdeletesample]                                                                                         | the operation to delete a budget. x-ms-original-file: 2026-06-01/DeleteBudget.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
| [budgetsGetSample.ts][budgetsgetsample]                                                                                               | gets the budget for the scope by budget name. x-ms-original-file: 2026-06-01/Budget.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
| [budgetsListSample.ts][budgetslistsample]                                                                                             | lists all budgets for the defined scope. x-ms-original-file: 2026-06-01/BudgetsList.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
| [chargesListSample.ts][chargeslistsample]                                                                                             | lists the charges based for the defined scope. x-ms-original-file: 2026-06-01/ChargesForBillingPeriodByDepartment.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| [creditsGetSample.ts][creditsgetsample]                                                                                               | the credit summary by billingAccountId and billingProfileId. x-ms-original-file: 2026-06-01/CreditSummaryByBillingProfile.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| [eventsOperationsListByBillingAccountSample.ts][eventsoperationslistbybillingaccountsample]                                           | lists the events that decrements Azure credits or Microsoft Azure consumption commitment for a billing account or a billing profile for a given start and end date. x-ms-original-file: 2026-06-01/EventsGetByBillingAccount-Contributor.json                                                                                                                                                                                                                                                                                                                                                                                                              |
| [eventsOperationsListByBillingProfileSample.ts][eventsoperationslistbybillingprofilesample]                                           | lists the events that decrements Azure credits or Microsoft Azure consumption commitment for a billing account or a billing profile for a given start and end date. x-ms-original-file: 2026-06-01/EventsListByBillingProfile.json                                                                                                                                                                                                                                                                                                                                                                                                                         |
| [lotsOperationsListByBillingAccountSample.ts][lotsoperationslistbybillingaccountsample]                                               | lists all Microsoft Azure consumption commitments for a billing account. The API is only supported for Microsoft Customer Agreements (MCA) and Direct Enterprise Agreement (EA) billing accounts. x-ms-original-file: 2026-06-01/LotsListByBillingAccount-Contributor.json                                                                                                                                                                                                                                                                                                                                                                                 |
| [lotsOperationsListByBillingProfileSample.ts][lotsoperationslistbybillingprofilesample]                                               | lists all Azure credits for a billing account or a billing profile. The API is only supported for Microsoft Customer Agreements (MCA) billing accounts. x-ms-original-file: 2026-06-01/LotsListByBillingProfile.json                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| [lotsOperationsListByCustomerSample.ts][lotsoperationslistbycustomersample]                                                           | lists all Azure credits for a customer. The API is only supported for Microsoft Partner Agreements (MPA) billing accounts. x-ms-original-file: 2026-06-01/LotsListByCustomer.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
| [marketplacesListSample.ts][marketplaceslistsample]                                                                                   | lists the marketplaces for a scope at the defined scope. Marketplaces are available via this API only for May 1, 2014 or later. x-ms-original-file: 2026-06-01/MarketplacesByBillingAccountList.json                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| [operationsListSample.ts][operationslistsample]                                                                                       | list the operations for the provider x-ms-original-file: 2026-06-01/OperationList.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
| [priceSheetDownloadByBillingAccountPeriodSample.ts][pricesheetdownloadbybillingaccountperiodsample]                                   | generates the pricesheet for the provided billing period asynchronously based on the enrollment id x-ms-original-file: 2026-06-01/EAPriceSheetForBillingPeriod.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
| [priceSheetGetByBillingPeriodSample.ts][pricesheetgetbybillingperiodsample]                                                           | get the price sheet for a scope by subscriptionId and billing period. Price sheet is available via this API only for May 1, 2014 or later. x-ms-original-file: 2026-06-01/PriceSheetExpand.json                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| [priceSheetGetSample.ts][pricesheetgetsample]                                                                                         | gets the price sheet for a subscription. Price sheet is available via this API only for May 1, 2014 or later. x-ms-original-file: 2026-06-01/PriceSheet.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| [reservationRecommendationDetailsGetSample.ts][reservationrecommendationdetailsgetsample]                                             | details of a reservation recommendation for what-if analysis of reserved instances. x-ms-original-file: 2026-06-01/ReservationRecommendationDetailsByBillingAccount.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
| [reservationRecommendationsListSample.ts][reservationrecommendationslistsample]                                                       | list of recommendations for purchasing reserved instances. x-ms-original-file: 2026-06-01/ReservationRecommendationsByBillingAccount.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| [reservationTransactionsListByBillingProfileSample.ts][reservationtransactionslistbybillingprofilesample]                             | list of transactions for reserved instances on billing profile scope. The refund transactions are posted along with its purchase transaction (i.e. in the purchase billing month). For example, The refund is requested in May 2021. This refund transaction will have event date as May 2021 but the billing month as April 2020 when the reservation purchase was made. Note: ARM has a payload size limit of 12MB, so currently callers get 400 when the response size exceeds the ARM limit. In such cases, API call should be made with smaller date ranges. x-ms-original-file: 2026-06-01/ReservationTransactionsListByBillingProfileId.json        |
| [reservationTransactionsListSample.ts][reservationtransactionslistsample]                                                             | list of transactions for reserved instances on billing account scope. Note: The refund transactions are posted along with its purchase transaction (i.e. in the purchase billing month). For example, The refund is requested in May 2021. This refund transaction will have event date as May 2021 but the billing month as April 2020 when the reservation purchase was made. Note: ARM has a payload size limit of 12MB, so currently callers get 400 when the response size exceeds the ARM limit. In such cases, API call should be made with smaller date ranges. x-ms-original-file: 2026-06-01/ReservationTransactionsListByEnrollmentNumber.json  |
| [reservationsDetailsListByReservationOrderAndReservationSample.ts][reservationsdetailslistbyreservationorderandreservationsample]     | lists the reservations details for provided date range. Note: ARM has a payload size limit of 12MB, so currently callers get 400 when the response size exceeds the ARM limit. If the data size is too large, customers may also get 504 as the API timed out preparing the data. In such cases, API call should be made with smaller date ranges or a call to Generate Reservation Details Report API should be made as it is asynchronous and will not run into response size time outs. x-ms-original-file: 2026-06-01/ReservationDetailsWithReservationId.json                                                                                         |
| [reservationsDetailsListByReservationOrderSample.ts][reservationsdetailslistbyreservationordersample]                                 | lists the reservations details for provided date range. Note: ARM has a payload size limit of 12MB, so currently callers get 400 when the response size exceeds the ARM limit. If the data size is too large, customers may also get 504 as the API timed out preparing the data. In such cases, API call should be made with smaller date ranges or a call to Generate Reservation Details Report API should be made as it is asynchronous and will not run into response size time outs. x-ms-original-file: 2026-06-01/ReservationDetails.json                                                                                                          |
| [reservationsDetailsListSample.ts][reservationsdetailslistsample]                                                                     | lists the reservations details for provided date range. Note: ARM has a payload size limit of 12MB, so currently callers get 400 when the response size exceeds the ARM limit. If the data size is too large, customers may also get 504 as the API timed out preparing the data. In such cases, API call should be made with smaller date ranges or a call to Generate Reservation Details Report API should be made as it is asynchronous and will not run into response size time outs. x-ms-original-file: 2026-06-01/ReservationDetailsByBillingAccountId.json                                                                                        |
| [reservationsSummariesListByReservationOrderAndReservationSample.ts][reservationssummarieslistbyreservationorderandreservationsample] | lists the reservations summaries for daily or monthly grain. Note: ARM has a payload size limit of 12MB, so currently callers get 400 when the response size exceeds the ARM limit. In such cases, API call should be made with smaller date ranges. x-ms-original-file: 2026-06-01/ReservationSummariesDailyWithReservationId.json                                                                                                                                                                                                                                                                                                                        |
| [reservationsSummariesListByReservationOrderSample.ts][reservationssummarieslistbyreservationordersample]                             | lists the reservations summaries for daily or monthly grain. Note: ARM has a payload size limit of 12MB, so currently callers get 400 when the response size exceeds the ARM limit. In such cases, API call should be made with smaller date ranges. x-ms-original-file: 2026-06-01/ReservationSummariesDaily.json                                                                                                                                                                                                                                                                                                                                         |
| [reservationsSummariesListSample.ts][reservationssummarieslistsample]                                                                 | lists the reservations summaries for the defined scope daily or monthly grain. Note: ARM has a payload size limit of 12MB, so currently callers get 400 when the response size exceeds the ARM limit. In such cases, API call should be made with smaller date ranges. x-ms-original-file: 2026-06-01/ReservationSummariesDailyWithBillingAccountId.json                                                                                                                                                                                                                                                                                                   |
| [tagsGetSample.ts][tagsgetsample]                                                                                                     | get all available tag keys for the defined scope x-ms-original-file: 2026-06-01/Tags.json                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| [usageDetailsListSample.ts][usagedetailslistsample]                                                                                   | lists the usage details for the defined scope. Usage details are available via this API only for May 1, 2014 or later. **Note:Microsoft will be retiring the Consumption Usage Details API at some point in the future. We do not recommend that you take a new dependency on this API. Please use the Cost Details API instead. We will notify customers once a date for retirement has been determined.For Learn more,see [Generate Cost Details Report - Create Operation](https://learn.microsoft.com/en-us/rest/api/cost-management/generate-cost-details-report/create-operation?tabs=HTTP)** x-ms-original-file: 2026-06-01/UsageDetailsExpand.json |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

Before running the samples in Node, they must be compiled to JavaScript using the TypeScript compiler. For more information on TypeScript, see the [TypeScript documentation][typescript]. Install the TypeScript compiler using:

```bash
npm install -g typescript
```

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Compile the samples:

```bash
npm run build
```

3. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

4. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node dist/aggregatedCostGetByManagementGroupSample.js
```

Alternatively, run a single sample with the required environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
node dist/aggregatedCostGetByManagementGroupSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[aggregatedcostgetbymanagementgroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v10/typescript/src/aggregatedCostGetByManagementGroupSample.ts
[aggregatedcostgetforbillingperiodbymanagementgroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v10/typescript/src/aggregatedCostGetForBillingPeriodByManagementGroupSample.ts
[balancesgetbybillingaccountsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v10/typescript/src/balancesGetByBillingAccountSample.ts
[balancesgetforbillingperiodbybillingaccountsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v10/typescript/src/balancesGetForBillingPeriodByBillingAccountSample.ts
[budgetscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v10/typescript/src/budgetsCreateOrUpdateSample.ts
[budgetsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v10/typescript/src/budgetsDeleteSample.ts
[budgetsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v10/typescript/src/budgetsGetSample.ts
[budgetslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v10/typescript/src/budgetsListSample.ts
[chargeslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v10/typescript/src/chargesListSample.ts
[creditsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v10/typescript/src/creditsGetSample.ts
[eventsoperationslistbybillingaccountsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v10/typescript/src/eventsOperationsListByBillingAccountSample.ts
[eventsoperationslistbybillingprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v10/typescript/src/eventsOperationsListByBillingProfileSample.ts
[lotsoperationslistbybillingaccountsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v10/typescript/src/lotsOperationsListByBillingAccountSample.ts
[lotsoperationslistbybillingprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v10/typescript/src/lotsOperationsListByBillingProfileSample.ts
[lotsoperationslistbycustomersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v10/typescript/src/lotsOperationsListByCustomerSample.ts
[marketplaceslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v10/typescript/src/marketplacesListSample.ts
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v10/typescript/src/operationsListSample.ts
[pricesheetdownloadbybillingaccountperiodsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v10/typescript/src/priceSheetDownloadByBillingAccountPeriodSample.ts
[pricesheetgetbybillingperiodsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v10/typescript/src/priceSheetGetByBillingPeriodSample.ts
[pricesheetgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v10/typescript/src/priceSheetGetSample.ts
[reservationrecommendationdetailsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v10/typescript/src/reservationRecommendationDetailsGetSample.ts
[reservationrecommendationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v10/typescript/src/reservationRecommendationsListSample.ts
[reservationtransactionslistbybillingprofilesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v10/typescript/src/reservationTransactionsListByBillingProfileSample.ts
[reservationtransactionslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v10/typescript/src/reservationTransactionsListSample.ts
[reservationsdetailslistbyreservationorderandreservationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v10/typescript/src/reservationsDetailsListByReservationOrderAndReservationSample.ts
[reservationsdetailslistbyreservationordersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v10/typescript/src/reservationsDetailsListByReservationOrderSample.ts
[reservationsdetailslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v10/typescript/src/reservationsDetailsListSample.ts
[reservationssummarieslistbyreservationorderandreservationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v10/typescript/src/reservationsSummariesListByReservationOrderAndReservationSample.ts
[reservationssummarieslistbyreservationordersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v10/typescript/src/reservationsSummariesListByReservationOrderSample.ts
[reservationssummarieslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v10/typescript/src/reservationsSummariesListSample.ts
[tagsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v10/typescript/src/tagsGetSample.ts
[usagedetailslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/consumption/arm-consumption/samples/v10/typescript/src/usageDetailsListSample.ts
[apiref]: https://learn.microsoft.com/javascript/api/@azure/arm-consumption
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/consumption/arm-consumption/README.md
[typescript]: https://www.typescriptlang.org/docs/home.html
